--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(0, 0, 0, 0.3);
   margin-top: 40%;
   margin-bottom: auto;
   height: 15%;
@@ -60,4 +60,16 @@ body {
   flex: 3;
   height: 100%;
   background-color: #ededed;
+}
+
+form {
+  background-color: white;
+}
+
+form label {
+  display: block;
+}
+
+form .line {
+  display: flex;
 }
