--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -60,6 +61,10 @@ body {
   flex: 3;
   height: 100%;
   background-color: #ededed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 25px;
 }
 
 form {
@@ -72,4 +77,62 @@ form label {
 
 form .line {
   display: flex;
+  margin: 20px 0;
+}
+
+.form button {
+  background-color: #596D48;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 190px;
+  height: 40px;
+  margin-left: 50px;
+}
+
+.form h4 {
+  margin-left: 50px;
+}
+
+.form a {
+  color: #596D48;
+  text-decoration: none;
+}
+
+.text {
+  margin: 0px 50px;
+}
+
+.form form {
+  padding-left: 50px;
+}
+
+form label {
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+form .input {
+  width: 50%;
+}
+
+form input {
+  border: solid 1px #E5E7EB;
+  padding: 4px;
+  width: 85%;
+  border-radius: 3px;
+}
+
+form .error {
+  border-color: red;
+}
+
+form .error::after {
+  color: red;
+  content: "*Passwords do not match";
+}
+
+form input:focus {
+  box-shadow: 1px 1px 5px black;
 }
