--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,9 @@ body {
   background: rgba(0, 0, 0, 0.3);
   margin-top: 40%;
   margin-bottom: auto;
-  height: 15%;
+  height: 18%;
   font-size: 32px;
+  padding: 10px 0;
 }
 
 .photo img {
@@ -64,7 +65,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 25px;
+  gap: 30px;
 }
 
 form {
@@ -73,6 +74,7 @@ form {
 
 form label {
   display: block;
+  margin-bottom: 5px;
 }
 
 form .line {
@@ -93,6 +95,8 @@ form .line {
 
 .form h4 {
   margin-left: 50px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .form a {
@@ -134,5 +138,16 @@ form .error::after {
 }
 
 form input:focus {
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 1px 1px 4px black;
+}
+
+.input p {
+  color: red;
+  margin-top: 2px;
+  margin-bottom: 0;
+  font-size: 10px;
+}
+
+.input .hidden {
+  display: none;
 }
